review position arrow slide and change div to a tag

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
 </header>
 <main>
 	<div id="banner">
-		<div class="arrow_right">
-			<img src="assets/images/arrow_right.png" alt="arrow right">
-		</div>
-		<div class="arrow_left">
-			<img src="assets/images/arrow_left.png" alt="arrow left">
-		</div>
 		<img class="banner-img" src="./assets/images/slideshow/slide1.jpg" alt="Banner Print-it">
 		<p>Impressions tous formats <span>en boutique et en ligne</span></p>
+		<a class="arrow_right">
+			<img src="assets/images/arrow_right.png" alt="arrow right">
+		</a>
+		<a class="arrow_left">
+			<img src="assets/images/arrow_left.png" alt="arrow left">
+		</a>
 		<div class="dots">
 		</div>
 	</div>
