--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 			<img src="assets/images/arrow_left.png" alt="arrow left">
 		</a>
 		<div class="dots">
+			<span class="dot dot_selected"></span>
+            <span class="dot"></span>
+            <span class="dot"></span>
 		</div>
 	</div>
 	<section id="about-us" class="container">
