--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 	<div id="banner">
 		<img class="banner-img" src="./assets/images/slideshow/slide1.jpg" alt="Banner Print-it">
 		<p>Impressions tous formats <span>en boutique et en ligne</span></p>
-		<a class="arrow arrow_right">
+		<a class="arrow arrow_right" onclick="moveSlides(1)">
 			<img src="assets/images/arrow_right.png" alt="arrow right">
 		</a>
-		<a class="arrow arrow_left">
+		<a class="arrow arrow_left" onclick="moveSlides(-1)">
 			<img src="assets/images/arrow_left.png" alt="arrow left">
 		</a>
 		<div class="dots">
