--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
 </header>
 <main>
 	<div id="banner">
+		<div id="slider-content">
+			<img class="banner-img" src="./assets/images/slideshow/slide1.jpg" alt="Banner Print-it">
+			<p>Impressions tous formats <span>en boutique et en ligne</span></p>
+		</div>
 		<a class="arrow arrow_right" onclick="moveSlides(1)">
 			<img src="assets/images/arrow_right.png" alt="arrow right">
 		</a>
@@ -26,7 +30,7 @@
 		</a>
 		<div class="dots">
 		</div>
-	</div>
+	</div>	
 	<section id="about-us" class="container">
 		<div>
 			<h2>Qui sommes-nous ?</h2>
